Cherry-pick e1869c79a82b. rdar://problem/102776727

Fix aspect-ratio/flex-aspect-ratio-031.html
    https://bugs.webkit.org/show_bug.cgi?id=243209

    Reviewed by Darin Adler.

    When using box-sizing: border-box, calculated aspect-ratio
    sizes can become smaller than border+padding sizes, causing
    negative content sizes. Prevent this in various places including flexbox.

    * LayoutTests/TestExpectations:
    * Source/WebCore/rendering/RenderBox.cpp:
    (WebCore::inlineSizeFromAspectRatio):
    (WebCore::RenderBox::computeLogicalWidthInFragment const):
    * Source/WebCore/rendering/RenderBox.h:
    (WebCore::RenderBox::blockSizeFromAspectRatio):
    * Source/WebCore/rendering/RenderFlexibleBox.cpp:
    (WebCore::RenderFlexibleBox::computeMainSizeFromAspectRatioUsing const):

    Canonical link: https://commits.webkit.org/252949@main

Canonical link: https://commits.webkit.org/252432.874@safari-7614-branch